added .underline and .underline:hover

--- a/week-07/day-2/starwars.css
+++ b/week-07/day-2/starwars.css
@@ -56,3 +56,11 @@ button:hover {
 ul li {
   margin-bottom: 10px;
 }
+
+.underline {
+  text-decoration: purple underline 2px;
+}
+
+.underline:hover {
+  cursor: pointer;
+}
